--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2019 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2014-2019, 2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -147,8 +147,8 @@
             android:syncable="true"/>
 
         <provider
-            android:name="com.nextgis.maplibui.util.UriFileProvider"
-            android:authorities="com.nextgis.maplibui.easypicker.provider"
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.easypicker.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
