--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':maplibui')
-    implementation 'com.joshdholtz.sentry:sentry-android:1.6.0'
-    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.github.joshdholtz:Sentry-Android:1.6.0'
+    implementation 'com.github.JakeWharton:NineOldAndroids:2.4.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 //    implementation 'com.android.support:support-compat:28.0.0'
     implementation('com.android.support:recyclerview-v7:28.0.0') {
@@ -78,5 +78,6 @@ dependencies {
     }
     implementation 'com.google.android.gms:play-services-analytics:16.0.7'
     implementation 'com.github.TechFreak:WizardPager:1.0.3'
-    implementation 'com.hypertrack:hyperlog:0.0.10'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
 }
