--- a/wizardpager/build.gradle
+++ b/wizardpager/build.gradle
@@ -11,8 +11,8 @@ android {
         versionCode 1
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
