--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,14 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'io.sentry.android.gradle'
+apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-kapt'
+
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 32
 
     // Setup the Sentry DSN from the file 'sentry.properties', which should contain
     // sentry.dsn=https://publicKey:secretKey@host:port/1?options
@@ -39,10 +44,10 @@ android {
 
     defaultConfig {
         applicationId 'com.nextgis.mobile'
-        minSdkVersion 14
-        targetSdkVersion 33
-        versionCode 113
-        versionName '2.6.47'
+        minSdkVersion 21
+        targetSdkVersion 32
+        versionCode 116
+        versionName '2.6.49'
         archivesBaseName = "ngmobile-$versionName"
         buildConfigField "String", "SENTRY_DSN", "\"${sentryDsn}\""
     }
@@ -71,6 +76,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             resValue 'string', 'APP_NAME', 'NextGIS Mobile'
+            resValue 'string', 'SENTRY_DSN', sentryDsn
             resValue 'string', 'provider_auth', 'com.nextgis.mobile.provider'
             resValue 'string', 'nextgis_mobile_accounts_auth', 'com.nextgis.mobile.account'
             resValue 'string', 'nextgis_accounts_auth_type', 'com.nextgis.account'
@@ -85,6 +91,7 @@ android {
             applicationIdSuffix '.debug'
             versionNameSuffix '-DEBUG'
             resValue 'string', 'APP_NAME', 'DEV NextGIS Mobile'
+            resValue 'string', 'SENTRY_DSN', sentryDsn
             resValue 'string', 'provider_auth', 'com.nextgis.mobile.provider.debug'
             resValue 'string', 'nextgis_mobile_accounts_auth', 'com.nextgis.mobile.account.debug'
             resValue 'string', 'nextgis_accounts_auth_type', 'com.nextgis.account.debug'
@@ -104,19 +111,30 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':maplibui')
-    implementation 'com.github.joshdholtz:Sentry-Android:1.6.0'
+    //implementation 'com.github.joshdholtz:Sentry-Android:1.6.0'
+    //implementation 'io.sentry:sentry-android:1.7.30'
+    implementation ('io.sentry:sentry-android:6.18.1'){
+        exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+    }
+
+
     implementation 'com.github.JakeWharton:NineOldAndroids:2.4.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
 //    implementation 'com.android.support:support-compat:28.0.0'
-    implementation('androidx.recyclerview:recyclerview:1.0.0') {
+    implementation('androidx.recyclerview:recyclerview:1.2.0') {
         force = true
     }
     implementation('androidx.legacy:legacy-support-v4:1.0.0') {
         force = true
     }
-    implementation 'com.google.android.gms:play-services-analytics:18.0.2'
+    implementation 'com.google.android.gms:play-services-analytics:18.0.3'
 //    implementation 'com.github.TechFreak:WizardPager:1.0.3'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
     implementation project(path: ':wizardpager')
 }
